--- a/views/projects.html
+++ b/views/projects.html
@@ -46,37 +46,37 @@
     
           <!-- Desktop Menu -->
           <div class="hidden md:flex space-x-5 md:space-x-6 items-center text-sm">
-            <a href="/"
+            <a href="../index.html"
                class="relative nav-link text-indigo-500 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300
                       after:content-[''] after:absolute after:left-0 after:-bottom-0.5 after:w-0 after:h-[2px] after:bg-indigo-500 after:transition-all after:duration-300 hover:after:w-full">
               Home
             </a>
           
-            <a href="#about"
+            <a href="../index.html#about"
                class="relative nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300
                       after:content-[''] after:absolute after:left-0 after:-bottom-0.5 after:w-0 after:h-[2px] after:bg-indigo-600 after:transition-all after:duration-300 hover:after:w-full">
               About
             </a>
           
-            <a href="#skills"
+            <a href="../index.html#skills"
                class="relative nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300
                       after:content-[''] after:absolute after:left-0 after:-bottom-0.5 after:w-0 after:h-[2px] after:bg-indigo-600 after:transition-all after:duration-300 hover:after:w-full">
               Skills
             </a>
           
-            <a href="#projects"
+            <a href="projects.html"
                class="relative nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300
                       after:content-[''] after:absolute after:left-0 after:-bottom-0.5 after:w-0 after:h-[2px] after:bg-indigo-600 after:transition-all after:duration-300 hover:after:w-full">
               Projects
             </a>
           
-            <a href="views/achievements.html"
+            <a href="achievements.html"
                class="relative nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300
                       after:content-[''] after:absolute after:left-0 after:-bottom-0.5 after:w-0 after:h-[2px] after:bg-indigo-600 after:transition-all after:duration-300 hover:after:w-full">
               Achievements
             </a>
           
-            <a href="#contact"
+            <a href="../index.html#contact"
                class="relative nav-link text-gray-700 dark:text-gray-300 hover:text-indigo-600 dark:hover:text-indigo-500 transition-colors duration-300
                       after:content-[''] after:absolute after:left-0 after:-bottom-0.5 after:w-0 after:h-[2px] after:bg-indigo-600 after:transition-all after:duration-300 hover:after:w-full">
               Contact
@@ -108,37 +108,37 @@
         x-transition:leave-end="-translate-x-full opacity-0"
         class="md:hidden border-r border-gray-200 dark:border-gray-700/50 bg-white dark:bg-slate-900 shadow-md absolute top-10.5 left-0 w-full h-screen z-50 pt-4 px-1 space-y-1 text-gray-700 dark:text-gray-300"
       >
-        <a href="index.html" class="flex items-center gap-2 py-2 px-5 bg-white/10 rounded" @click="isOpen = !isOpen">
+        <a href="../index.html" class="flex items-center gap-2 py-2 px-5 bg-white/10 rounded" @click="isOpen = !isOpen">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
             <path fill-rule="evenodd" d="M9.293 2.293a1 1 0 0 1 1.414 0l7 7A1 1 0 0 1 17 11h-1v6a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-6H3a1 1 0 0 1-.707-1.707l7-7Z" clip-rule="evenodd" />
           </svg>
           <h6 class="text-base text-gray-700 dark:text-gray-300">Home</h6>
         </a>
-        <a href="#about" class="flex items-center gap-2 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
+        <a href="../index.html#about" class="flex items-center gap-2 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
             <path fill-rule="evenodd" d="M18 10a8 8 0 1 1-16 0 8 8 0 0 1 16 0Zm-7-4a1 1 0 1 1-2 0 1 1 0 0 1 2 0ZM9 9a.75.75 0 0 0 0 1.5h.253a.25.25 0 0 1 .244.304l-.459 2.066A1.75 1.75 0 0 0 10.747 15H11a.75.75 0 0 0 0-1.5h-.253a.25.25 0 0 1-.244-.304l.459-2.066A1.75 1.75 0 0 0 9.253 9H9Z" clip-rule="evenodd" />
           </svg>
           <h6 class="text-base text-gray-700 dark:text-gray-300">About</h6>
         </a>
-        <a href="#skills" class="flex items-center gap-2 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
+        <a href="../index.html#skills" class="flex items-center gap-2 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
             <path fill-rule="evenodd" d="M16.403 12.652a3 3 0 0 0 0-5.304 3 3 0 0 0-3.75-3.751 3 3 0 0 0-5.305 0 3 3 0 0 0-3.751 3.75 3 3 0 0 0 0 5.305 3 3 0 0 0 3.75 3.751 3 3 0 0 0 5.305 0 3 3 0 0 0 3.751-3.75Zm-2.546-4.46a.75.75 0 0 0-1.214-.883l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089l4-5.5Z" clip-rule="evenodd" />
           </svg>
           <h6 class="text-base text-gray-700 dark:text-gray-300">Skills</h6>
         </a>
-        <a href="#projects" class="flex items-center gap-2 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
+        <a href="projects.html" class="flex items-center gap-2 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
             <path fill-rule="evenodd" d="M4.25 2A2.25 2.25 0 0 0 2 4.25v11.5A2.25 2.25 0 0 0 4.25 18h11.5A2.25 2.25 0 0 0 18 15.75V4.25A2.25 2.25 0 0 0 15.75 2H4.25Zm4.03 6.28a.75.75 0 0 0-1.06-1.06L4.97 9.47a.75.75 0 0 0 0 1.06l2.25 2.25a.75.75 0 0 0 1.06-1.06L6.56 10l1.72-1.72Zm4.5-1.06a.75.75 0 1 0-1.06 1.06L13.44 10l-1.72 1.72a.75.75 0 1 0 1.06 1.06l2.25-2.25a.75.75 0 0 0 0-1.06l-2.25-2.25Z" clip-rule="evenodd" />
           </svg>
           <h6 class="text-base text-gray-700 dark:text-gray-300">Projects</h6>
         </a>
-        <a href="views/achievements.html" class="flex items-center gap-2 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
+        <a href="achievements.html" class="flex items-center gap-2 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
             <path fill-rule="evenodd" d="M10.868 2.884c-.321-.772-1.415-.772-1.736 0l-1.83 4.401-4.753.381c-.833.067-1.171 1.107-.536 1.651l3.62 3.102-1.106 4.637c-.194.813.691 1.456 1.405 1.02L10 15.591l4.069 2.485c.713.436 1.598-.207 1.404-1.02l-1.106-4.637 3.62-3.102c.635-.544.297-1.584-.536-1.65l-4.752-.382-1.831-4.401Z" clip-rule="evenodd" />
           </svg>
           <h6 class="text-base text-gray-700 dark:text-gray-300">Achievements</h6>
         </a>
-        <a href="#contact" class="flex items-center gap-3 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
+        <a href="../index.html#contact" class="flex items-center gap-3 py-2 px-5 active:bg-white/10 rounded" @click="isOpen = !isOpen">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-4">
             <path fill-rule="evenodd" d="M2 3.5A1.5 1.5 0 0 1 3.5 2h1.148a1.5 1.5 0 0 1 1.465 1.175l.716 3.223a1.5 1.5 0 0 1-1.052 1.767l-.933.267c-.41.117-.643.555-.48.95a11.542 11.542 0 0 0 6.254 6.254c.395.163.833-.07.95-.48l.267-.933a1.5 1.5 0 0 1 1.767-1.052l3.223.716A1.5 1.5 0 0 1 18 15.352V16.5a1.5 1.5 0 0 1-1.5 1.5H15c-1.149 0-2.263-.15-3.326-.43A13.022 13.022 0 0 1 2.43 8.326 13.019 13.019 0 0 1 2 5V3.5Z" clip-rule="evenodd" />
           </svg>
@@ -146,14 +146,15 @@
         </a>
       </div>
     </nav>
+
     <!-- Projects Section -->
     <section id="projects" class="py-20 bg-white dark:bg-gray-900 mt-10" x-data="{ activeFilter: 'all' }">
-      <div class="w-full px-40">
+      <div class="w-full px-12 xl:px-40">
         <h2 class="text-3xl md:text-4xl font-bold text-center mb-16 dark:text-white">
           My <span class="text-indigo-600 dark:text-indigo-400">Projects</span>
         </h2>
 
-        <div class="flex flex-wrap justify-center gap-4 mb-12">
+        <div class="flex justify-center gap-2 md:gap-4 mb-12 text-sm md:text-base">
           <button @click="activeFilter = 'all'"
                   :class="activeFilter === 'all' ? 'bg-indigo-600 dark:bg-indigo-500 text-white' : 'bg-gray-200 dark:bg-gray-800 dark:hover:bg-indigo-400 text-gray-700 dark:text-gray-200'"
                   class="px-6 py-2 rounded-full transition-colors duration-300">
@@ -162,7 +163,7 @@
           <button @click="activeFilter = 'web'"
                   :class="activeFilter === 'web' ? 'bg-indigo-600 dark:bg-indigo-500 text-white' : 'bg-gray-200 dark:bg-gray-800 dark:hover:bg-indigo-400 text-gray-700 dark:text-gray-200'"
                   class="px-6 py-2 rounded-full transition-colors duration-300">
-            Web Apps
+            Web
           </button>
           <button @click="activeFilter = 'mobile'"
                   :class="activeFilter === 'mobile' ? 'bg-indigo-600 dark:bg-indigo-500 text-white' : 'bg-gray-200 dark:bg-gray-800 dark:hover:bg-indigo-400 text-gray-700 dark:text-gray-200'"
@@ -176,7 +177,7 @@
           </button>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-8">
         
           <div class="bg-white dark:bg-gray-700 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-200 dark:border-gray-800 hover:cursor-pointer" x-data="{ category: 'web' }" x-show="activeFilter === 'all' || activeFilter === category">
             <div class="relative overflow-hidden h-64">
@@ -288,7 +289,7 @@
 
   </body>
   <!-- JS -->
-  <script src="src/main.js"></script>
+  <script src="../src/main.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script
       src="https://kit.fontawesome.com/fb890e3537.js"
