--- a/views/achievements.html
+++ b/views/achievements.html
@@ -130,30 +130,231 @@
         </h2>
 
         <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8">
-            <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-[1.02] transition duration-300 ease-in-out border border-gray-200 dark:border-gray-700">
-              <div class="relative h-48 overflow-hidden">
-                <img
-                  src="/assets/certificates/X_sertikom_1.png"
-                  alt="Certificate for Web Development Course"
-                  class="w-full h-full object-cover transition-opacity duration-300 hover:opacity-80"
-                />
-                <div class="absolute top-0 right-0 bg-indigo-600 text-white text-xs font-semibold px-3 py-1 rounded-bl-lg">
-                  Certificate
-                </div>
-              </div>
-              <div class="p-5">
-                <h3 class="text-xl font-semibold mb-2 text-gray-900 dark:text-white truncate" title="restaurant-web-design">
-                  Web Design
-                </h3>
-                <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">
-                  A restaurant web design using HTML and CSS
-                </p>
-                <a href="https://github.com/Raevandhani/Foodie" target="_blank" class="inline-flex items-center text-sm font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 transition duration-150">
-                  View Projects
-                  <i class="ri-arrow-right-line ml-1"></i>
-                </a>
+
+          <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-[1.02] transition duration-300 ease-in-out border border-gray-200 dark:border-gray-700">
+            <div class="relative h-48 overflow-hidden">
+              <img
+                src="/assets/certificates/X_sertikom_1.png"
+                alt="Certificate for Web Development Course"
+                class="w-full h-full object-cover transition-opacity duration-300 hover:opacity-80"
+              />
+              <div class="absolute top-0 right-0 bg-indigo-600 text-white text-xs font-semibold px-3 py-1 rounded-bl-lg">
+                Certificate
               </div>
             </div>
+            <div class="p-5">
+              <h3 class="text-xl font-semibold mb-1 text-gray-900 dark:text-white truncate" title="restaurant-web-design">
+                Modern Restaurant Website Design
+              </h3>
+              <p class="text-sm text-indigo-600 dark:text-indigo-400 mb-1">
+               Sertikom #1
+              </p>
+              <p class="text-xs text-gray-600 dark:text-gray-400 mb-1">
+                Developed a modern restaurant website using HTML and CSS, focusing on user-friendly navigation, aesthetic design, and optimized layout.
+              </p>
+              <a href="https://github.com/Raevandhani/Foodie" target="_blank" class="inline-flex items-center text-sm font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 transition duration-150">
+                View Projects
+                <i class="ri-arrow-right-line ml-1"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-[1.02] transition duration-300 ease-in-out border border-gray-200 dark:border-gray-700">
+            <div class="relative h-48 overflow-hidden">
+              <img
+                src="/assets/certificates/X_sertikom_1.png"
+                alt="Certificate for Web Development Course"
+                class="w-full h-full object-cover transition-opacity duration-300 hover:opacity-80"
+              />
+              <div class="absolute top-0 right-0 bg-indigo-600 text-white text-xs font-semibold px-3 py-1 rounded-bl-lg">
+                Certificate
+              </div>
+            </div>
+            <div class="p-5">
+              <h3 class="text-xl font-semibold mb-1 text-gray-900 dark:text-white truncate" title="restaurant-web-design">
+                Modern Restaurant Website Design
+              </h3>
+              <p class="text-sm text-indigo-600 dark:text-indigo-400 mb-1">
+               Sertikom #1
+              </p>
+              <p class="text-xs text-gray-600 dark:text-gray-400 mb-1">
+                Developed a modern restaurant website using HTML and CSS, focusing on user-friendly navigation, aesthetic design, and optimized layout.
+              </p>
+              <a href="https://github.com/Raevandhani/Foodie" target="_blank" class="inline-flex items-center text-sm font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 transition duration-150">
+                View Projects
+                <i class="ri-arrow-right-line ml-1"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-[1.02] transition duration-300 ease-in-out border border-gray-200 dark:border-gray-700">
+            <div class="relative h-48 overflow-hidden">
+              <img
+                src="/assets/certificates/X_sertikom_1.png"
+                alt="Certificate for Web Development Course"
+                class="w-full h-full object-cover transition-opacity duration-300 hover:opacity-80"
+              />
+              <div class="absolute top-0 right-0 bg-indigo-600 text-white text-xs font-semibold px-3 py-1 rounded-bl-lg">
+                Certificate
+              </div>
+            </div>
+            <div class="p-5">
+              <h3 class="text-xl font-semibold mb-1 text-gray-900 dark:text-white truncate" title="restaurant-web-design">
+                Modern Restaurant Website Design
+              </h3>
+              <p class="text-sm text-indigo-600 dark:text-indigo-400 mb-1">
+               Sertikom #1
+              </p>
+              <p class="text-xs text-gray-600 dark:text-gray-400 mb-1">
+                Developed a modern restaurant website using HTML and CSS, focusing on user-friendly navigation, aesthetic design, and optimized layout.
+              </p>
+              <a href="https://github.com/Raevandhani/Foodie" target="_blank" class="inline-flex items-center text-sm font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 transition duration-150">
+                View Projects
+                <i class="ri-arrow-right-line ml-1"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-[1.02] transition duration-300 ease-in-out border border-gray-200 dark:border-gray-700">
+            <div class="relative h-48 overflow-hidden">
+              <img
+                src="/assets/certificates/X_sertikom_1.png"
+                alt="Certificate for Web Development Course"
+                class="w-full h-full object-cover transition-opacity duration-300 hover:opacity-80"
+              />
+              <div class="absolute top-0 right-0 bg-indigo-600 text-white text-xs font-semibold px-3 py-1 rounded-bl-lg">
+                Certificate
+              </div>
+            </div>
+            <div class="p-5">
+              <h3 class="text-xl font-semibold mb-1 text-gray-900 dark:text-white truncate" title="restaurant-web-design">
+                Modern Restaurant Website Design
+              </h3>
+              <p class="text-sm text-indigo-600 dark:text-indigo-400 mb-1">
+               Sertikom #1
+              </p>
+              <p class="text-xs text-gray-600 dark:text-gray-400 mb-1">
+                Developed a modern restaurant website using HTML and CSS, focusing on user-friendly navigation, aesthetic design, and optimized layout.
+              </p>
+              <a href="https://github.com/Raevandhani/Foodie" target="_blank" class="inline-flex items-center text-sm font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 transition duration-150">
+                View Projects
+                <i class="ri-arrow-right-line ml-1"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-[1.02] transition duration-300 ease-in-out border border-gray-200 dark:border-gray-700">
+            <div class="relative h-48 overflow-hidden">
+              <img
+                src="/assets/certificates/X_sertikom_1.png"
+                alt="Certificate for Web Development Course"
+                class="w-full h-full object-cover transition-opacity duration-300 hover:opacity-80"
+              />
+              <div class="absolute top-0 right-0 bg-indigo-600 text-white text-xs font-semibold px-3 py-1 rounded-bl-lg">
+                Certificate
+              </div>
+            </div>
+            <div class="p-5">
+              <h3 class="text-xl font-semibold mb-1 text-gray-900 dark:text-white truncate" title="restaurant-web-design">
+                Modern Restaurant Website Design
+              </h3>
+              <p class="text-sm text-indigo-600 dark:text-indigo-400 mb-1">
+               Sertikom #1
+              </p>
+              <p class="text-xs text-gray-600 dark:text-gray-400 mb-1">
+                Developed a modern restaurant website using HTML and CSS, focusing on user-friendly navigation, aesthetic design, and optimized layout.
+              </p>
+              <a href="https://github.com/Raevandhani/Foodie" target="_blank" class="inline-flex items-center text-sm font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 transition duration-150">
+                View Projects
+                <i class="ri-arrow-right-line ml-1"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-[1.02] transition duration-300 ease-in-out border border-gray-200 dark:border-gray-700">
+            <div class="relative h-48 overflow-hidden">
+              <img
+                src="/assets/certificates/X_sertikom_1.png"
+                alt="Certificate for Web Development Course"
+                class="w-full h-full object-cover transition-opacity duration-300 hover:opacity-80"
+              />
+              <div class="absolute top-0 right-0 bg-indigo-600 text-white text-xs font-semibold px-3 py-1 rounded-bl-lg">
+                Certificate
+              </div>
+            </div>
+            <div class="p-5">
+              <h3 class="text-xl font-semibold mb-1 text-gray-900 dark:text-white truncate" title="restaurant-web-design">
+                Modern Restaurant Website Design
+              </h3>
+              <p class="text-sm text-indigo-600 dark:text-indigo-400 mb-1">
+               Sertikom #1
+              </p>
+              <p class="text-xs text-gray-600 dark:text-gray-400 mb-1">
+                Developed a modern restaurant website using HTML and CSS, focusing on user-friendly navigation, aesthetic design, and optimized layout.
+              </p>
+              <a href="https://github.com/Raevandhani/Foodie" target="_blank" class="inline-flex items-center text-sm font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 transition duration-150">
+                View Projects
+                <i class="ri-arrow-right-line ml-1"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-[1.02] transition duration-300 ease-in-out border border-gray-200 dark:border-gray-700">
+            <div class="relative h-48 overflow-hidden">
+              <img
+                src="/assets/certificates/X_sertikom_1.png"
+                alt="Certificate for Web Development Course"
+                class="w-full h-full object-cover transition-opacity duration-300 hover:opacity-80"
+              />
+              <div class="absolute top-0 right-0 bg-indigo-600 text-white text-xs font-semibold px-3 py-1 rounded-bl-lg">
+                Certificate
+              </div>
+            </div>
+            <div class="p-5">
+              <h3 class="text-xl font-semibold mb-1 text-gray-900 dark:text-white truncate" title="restaurant-web-design">
+                Modern Restaurant Website Design
+              </h3>
+              <p class="text-sm text-indigo-600 dark:text-indigo-400 mb-1">
+               Sertikom #1
+              </p>
+              <p class="text-xs text-gray-600 dark:text-gray-400 mb-1">
+                Developed a modern restaurant website using HTML and CSS, focusing on user-friendly navigation, aesthetic design, and optimized layout.
+              </p>
+              <a href="https://github.com/Raevandhani/Foodie" target="_blank" class="inline-flex items-center text-sm font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 transition duration-150">
+                View Projects
+                <i class="ri-arrow-right-line ml-1"></i>
+              </a>
+            </div>
+          </div>
+
+          <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-[1.02] transition duration-300 ease-in-out border border-gray-200 dark:border-gray-700">
+            <div class="relative h-48 overflow-hidden">
+              <img
+                src="/assets/certificates/X_sertikom_1.png"
+                alt="Certificate for Web Development Course"
+                class="w-full h-full object-cover transition-opacity duration-300 hover:opacity-80"
+              />
+              <div class="absolute top-0 right-0 bg-indigo-600 text-white text-xs font-semibold px-3 py-1 rounded-bl-lg">
+                Certificate
+              </div>
+            </div>
+            <div class="p-5">
+              <h3 class="text-xl font-semibold mb-1 text-gray-900 dark:text-white truncate" title="restaurant-web-design">
+                Modern Restaurant Website Design
+              </h3>
+              <p class="text-sm text-indigo-600 dark:text-indigo-400 mb-1">
+               Sertikom #1
+              </p>
+              <p class="text-xs text-gray-600 dark:text-gray-400 mb-1">
+                Developed a modern restaurant website using HTML and CSS, focusing on user-friendly navigation, aesthetic design, and optimized layout.
+              </p>
+              <a href="https://github.com/Raevandhani/Foodie" target="_blank" class="inline-flex items-center text-sm font-medium text-indigo-600 hover:text-indigo-500 dark:text-indigo-400 dark:hover:text-indigo-300 transition duration-150">
+                View Projects
+                <i class="ri-arrow-right-line ml-1"></i>
+              </a>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
