--- a/views/projects.html
+++ b/views/projects.html
@@ -150,12 +150,17 @@
                   class="px-6 py-2 rounded-full transition-colors duration-300">
             Design
           </button>
+          <button @click="activeFilter = 'games'"
+                  :class="activeFilter === 'games' ? 'bg-indigo-600 dark:bg-indigo-500 text-white' : 'bg-gray-200 dark:bg-gray-800 dark:hover:bg-indigo-400 text-gray-700 dark:text-gray-200'"
+                  class="px-6 py-2 rounded-full transition-colors duration-300">
+            Games
+          </button>
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8">
         
-          <div class="bg-white dark:bg-gray-700 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-200 dark:border-gray-800 hover:cursor-pointer" x-data="{ category: 'web' }" x-show="activeFilter === 'all' || activeFilter === category">
-            <div class="relative overflow-hidden h-64">
+          <div class="bg-white dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 border border-gray-200 dark:border-gray-800 hover:cursor-pointer" x-data="{ category: 'web' }" x-show="activeFilter === 'all' || activeFilter === category">
+            <div class="relative overflow-hidden h-64 m-1 rounded-md">
               <img src="../assets/web/foodie.jpeg" alt="foodie" class="w-full object-top transition-transform duration-500 hover:scale-110">
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-end">
                 <div class="p-6 text-white">
@@ -169,19 +174,19 @@
                 <span class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-600 dark:text-indigo-400 text-xs rounded-full">HTML</span>
                 <span class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-600 dark:text-indigo-400 text-xs rounded-full">CSS</span>
               </div>
-              <div class="flex justify-between">
-                <a href="https://raevandhani.github.io/Foodie" class="text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 transition-colors duration-300 text-sm hover:underline">
-                  <i class="ri-eye-line mr-1"></i> Preview
-                </a>
-                <a href="https://github.com/Raevandhani/Foodie" class="text-gray-700 dark:text-gray-300 hover:text-gray-900 dark:hover:text-gray-100 transition-colors duration-300 text-sm hover:underline">
+              <div class="grid grid-cols-2 gap-2 mt-2">
+                <a href="https://github.com/Raevandhani/Foodie" class="text-center border border-indigo-600 hover:bg-indigo-500 py-2 rounded-md text-indigo-400 hover:text-white transition-all duration-300 font-semibold">
                   <i class="ri-github-fill mr-1"></i> Code
+                </a>
+                <a href="https://raevandhani.github.io/Foodie" class="text-center bg-indigo-600 hover:bg-indigo-800 py-2 rounded-md text-white transition-all duration-300 font-semibold">
+                  <i class="ri-eye-line mr-1"></i> Preview
                 </a>
               </div>
             </div>
           </div>
 
-          <div class="bg-white dark:bg-gray-700 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-200 dark:border-gray-800 hover:cursor-pointer" x-data="{ category: 'web' }" x-show="activeFilter === 'all' || activeFilter === category">  
-            <div class="relative overflow-hidden h-64">
+          <div class="bg-white dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 border border-gray-200 dark:border-gray-800 hover:cursor-pointer" x-data="{ category: 'web' }" x-show="activeFilter === 'all' || activeFilter === category">  
+            <div class="relative overflow-hidden h-64 m-1 rounded-md">
               <img src="../assets/web/exprohotel.jpeg" alt="exprohotel" class="w-full object-top transition-transform duration-500 hover:scale-110">
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-end">
                 <div class="p-6 text-white">
@@ -196,19 +201,16 @@
                 <span class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-600 dark:text-indigo-400 text-xs rounded-full">CSS</span>
                 <span class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-600 dark:text-indigo-400 text-xs rounded-full">PHP</span>
               </div>
-              <div class="flex justify-end">
-                <!-- <a href="https://github.com/Raevandhani/Foodie" class="text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 transition-colors duration-300 text-sm hover:underline">
-                  <i class="ri-eye-line mr-1"></i> Preview
-                </a> -->
-                <a href="https://github.com/Raevandhani/ExproHotel" class="text-gray-700 dark:text-gray-300 hover:text-gray-900 dark:hover:text-gray-100 transition-colors duration-300 text-sm hover:underline">
+              <div class="grid grid-cols-1 mt-2">
+                <a href="https://github.com/Raevandhani/ExproHotel" class="text-center border border-indigo-600 hover:bg-indigo-500 py-2 rounded-md text-indigo-400 hover:text-white transition-all duration-300 font-semibold">
                   <i class="ri-github-fill mr-1"></i> Code
                 </a>
               </div>
             </div>
           </div>
         
-          <div class="bg-white dark:bg-gray-700 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-200 dark:border-gray-800 hover:cursor-pointer" x-data="{ category: 'web' }" x-show="activeFilter === 'all' || activeFilter === category">
-            <div class="relative overflow-hidden h-64">
+          <div class="bg-white dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 border border-gray-200 dark:border-gray-800 hover:cursor-pointer" x-data="{ category: 'web' }" x-show="activeFilter === 'all' || activeFilter === category">
+            <div class="relative overflow-hidden h-64 m-1 rounded-md">
               <img src="../assets/web/library-management.png" alt="library-management" class="w-full h-full object-cover"/>
               <div class="absolute inset-0 bg-gradient-to-t from-black/90 to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-end">
                 <div class="p-6 text-white">
@@ -220,21 +222,22 @@
             <div class="p-4 bg-gray-100 dark:bg-gray-900">
               <div class="flex flex-wrap gap-2 mb-4">
                 <span class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-600 dark:text-indigo-400 text-xs rounded-full">Laravel</span>
+                <span class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-600 dark:text-indigo-400 text-xs rounded-full">Tailwind CSS</span>
               </div>
-              <div class="flex justify-end">
-                <!-- <a href="https://github.com/Raevandhani/Foodie" class="text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 transition-colors duration-300 text-sm hover:underline">
-                  <i class="ri-eye-line mr-1"></i> Preview
-                </a> -->
-                <a href="https://github.com/Raevandhani/LibraryManagement" class="text-gray-700 dark:text-gray-300 hover:text-gray-900 dark:hover:text-gray-100 transition-colors duration-300 text-sm hover:underline">
+              <div class="grid grid-cols-1 mt-2">
+                <a href="https://github.com/Raevandhani/LibraryManagement" class="text-center border border-indigo-600 hover:bg-indigo-500 py-2 rounded-md text-indigo-400 hover:text-white transition-all duration-300 font-semibold">
                   <i class="ri-github-fill mr-1"></i> Code
                 </a>
               </div>
             </div>
           </div>
         
-          <div class="bg-white dark:bg-gray-700 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-200 dark:border-gray-800 hover:cursor-pointer" x-data="{ category: 'web' }" x-show="activeFilter === 'all' || activeFilter === category">
-            <div class="relative overflow-hidden h-64">
+          <div class="bg-white dark:bg-gray-900 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 border border-gray-200 dark:border-gray-800 hover:cursor-pointer" x-data="{ category: 'web' }" x-show="activeFilter === 'all' || activeFilter === category">
+            <div class="relative overflow-hidden h-64 m-1 rounded-md">
               <img src="../assets/web/finance.jpeg" alt="finance" class="w-full object-top transition-transform duration-500 hover:scale-110">
+              <div class="absolute top-0 right-0 bg-blue-500 text-white text-sm font-semibold px-6 py-1.5 rounded-bl-lg border-l-2 border-b-2 border-white/20">
+                Website
+              </div>
               <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300 flex items-end">
                 <div class="p-6 text-white">
                   <h3 class="text-base font-semibold mb-1 text-white">Finance</h3>
@@ -247,12 +250,12 @@
                 <span class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-600 dark:text-indigo-400 text-xs rounded-full">HTML</span>
                 <span class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 text-indigo-600 dark:text-indigo-400 text-xs rounded-full">CSS</span>
               </div>
-              <div class="flex justify-between">
-                <a href="https://raevandhani.github.io/Finance" class="text-indigo-600 dark:text-indigo-400 hover:text-indigo-700 dark:hover:text-indigo-300 transition-colors duration-300 text-sm hover:underline">
-                  <i class="ri-eye-line mr-1"></i> Preview
-                </a>
-                <a href="https://github.com/Raevandhani/Finance" class="text-gray-700 dark:text-gray-300 hover:text-gray-900 dark:hover:text-gray-100 transition-colors duration-300 text-sm hover:underline">
+              <div class="grid grid-cols-2 gap-2 mt-2">
+                <a href="https://github.com/Raevandhani/Finance" class="text-center border border-indigo-600 hover:bg-indigo-500 py-2 rounded-md text-indigo-400 hover:text-white transition-all duration-300 font-semibold">
                   <i class="ri-github-fill mr-1"></i> Code
+                </a>
+                <a href="https://raevandhani.github.io/Finance" class="text-center bg-indigo-600 hover:bg-indigo-800 py-2 rounded-md text-white transition-all duration-300 font-semibold">
+                  <i class="ri-eye-line mr-1"></i> Preview
                 </a>
               </div>
             </div>
